--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     >
       <!-- Left: Logo -->
       <div class="d-flex align-items-center gap-3 nissi-logo">
-        <img src="/assets/img/nissi-logo.png" alt="Nissi Logo" />
+        <img src="./assets/img/nissi-logo.png" alt="Nissi Logo" />
       </div>
 
       <!-- Center: Search Bar -->
