--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
 
   <body>
@@ -51,19 +51,19 @@
       <nav class="text-white p-3" id="sidebar">
         <ul class="nav flex-column">
           <li class="nav-item mb-2">
-            <a href="/index.html" class="nav-link text-white active"
+            <a href="./index.html" class="nav-link text-white active"
               ><i class="fas fa-table me-2"></i>Dashboard</a
             >
           </li>
           <li class="nav-item mb-2">
-            <a href="/sales.html" class="nav-link text-white"
+            <a href="./sales.html" class="nav-link text-white"
               ><i class="fas fa-chart-line me-2"></i>Sales</a
             >
           </li>
           <li
             class="nav-item mb-2 d-flex justify-content-between align-items-center"
           >
-            <a href="/inventory.html" class="nav-link text-white">
+            <a href="./inventory.html" class="nav-link text-white">
               <i class="fas fa-medkit me-2"></i>Inventory
             </a>
             <span
@@ -74,24 +74,24 @@
             >
           </li>
           <li class="nav-item mb-2">
-            <a href="/suppliers.html" class="nav-link text-white"
+            <a href="./suppliers.html" class="nav-link text-white"
               ><i class="fas fa-truck me-2"></i>Suppliers</a
             >
           </li>
           <li class="nav-item mb-2">
-            <a href="/reports.html" class="nav-link text-white"
+            <a href="./reports.html" class="nav-link text-white"
               ><i class="fas fa-file-alt me-2"></i>Reports</a
             >
           </li>
           <li class="nav-item mb-2">
-            <a href="/configuration.html" class="nav-link text-white"
+            <a href="./configuration.html" class="nav-link text-white"
               ><i class="fas fa-sliders me-2"></i>Configuration</a
             >
           </li>
           <li
             class="nav-item mb-2 d-flex justify-content-between align-items-center"
           >
-            <a href="/notifications.html" class="nav-link text-white">
+            <a href="./notifications.html" class="nav-link text-white">
               <i class="fas fa-bell me-2"></i>Notifications
             </a>
             <span
@@ -128,7 +128,7 @@
         <div class="alert alert-warning d-none" id="stockAlert" role="alert">
           ⚠️ <strong>Stock Alert:</strong>
           <span id="lowStockCount">0</span> medicines are running low.
-          <a href="/inventory.html" class="ms-2 btn btn-sm btn-outline-dark"
+          <a href="./inventory.html" class="ms-2 btn btn-sm btn-outline-dark"
             >View Inventory</a
           >
         </div>
@@ -174,8 +174,8 @@
           <div class="col-md-6">
             <div class="card">
               <div class="card-body">
-                <h6>Revenue (Jan 2022)</h6>
-                <h3>Rs. 8,55,875</h3>
+                <h6>Revenue</h6>
+                <h3>GHS 45,000</h3>
                 <p>Frequently bought: <strong>Adalimumab</strong></p>
               </div>
             </div>
@@ -222,7 +222,7 @@
           <div class="col-md-6 mt-4">
             <div class="card">
               <div class="card-body">
-                <h6 class="card-title">Monthly Revenue (2022)</h6>
+                <h6 class="card-title">Monthly Revenue</h6>
                 <canvas id="revenueChart" height="180"></canvas>
               </div>
             </div>
@@ -254,7 +254,7 @@
     <!-- End Wrapper -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/inventory-overview.js"></script>
+    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/inventory-overview.js"></script>
   </body>
 </html>
