--- a/supplier-details.html
+++ b/supplier-details.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <!-- Top Navigation/Header -->
@@ -23,7 +23,7 @@
     >
       <!-- Left: Logo -->
       <div class="d-flex align-items-center gap-3 nissi-logo">
-        <img src="/assets/img/nissi-logo.png" alt="Nissi Logo" />
+        <img src="./assets/img/nissi-logo.png" alt="Nissi Logo" />
       </div>
 
       <!-- Center: Search Bar -->
@@ -51,19 +51,19 @@
       <nav class="text-white p-3" id="sidebar">
         <ul class="nav flex-column">
           <li class="nav-item mb-2">
-            <a href="/index.html" class="nav-link text-white"
+            <a href="./index.html" class="nav-link text-white"
               ><i class="fas fa-table me-2"></i>Dashboard</a
             >
           </li>
           <li class="nav-item mb-2">
-            <a href="/sales.html" class="nav-link text-white"
+            <a href="./sales.html" class="nav-link text-white"
               ><i class="fas fa-chart-line me-2"></i>Sales</a
             >
           </li>
           <li
             class="nav-item mb-2 d-flex justify-content-between align-items-center"
           >
-            <a href="/inventory.html" class="nav-link text-white">
+            <a href="./inventory.html" class="nav-link text-white">
               <i class="fas fa-medkit me-2"></i>Inventory
             </a>
             <span
@@ -74,24 +74,24 @@
             >
           </li>
           <li class="nav-item mb-2">
-            <a href="/suppliers.html" class="nav-link text-white active"
+            <a href="./suppliers.html" class="nav-link text-white active"
               ><i class="fas fa-truck me-2"></i>Suppliers</a
             >
           </li>
           <li class="nav-item mb-2">
-            <a href="/reports.html" class="nav-link text-white"
+            <a href="./reports.html" class="nav-link text-white"
               ><i class="fas fa-file-alt me-2"></i>Reports</a
             >
           </li>
           <li class="nav-item mb-2">
-            <a href="/configuration.html" class="nav-link text-white"
+            <a href="./configuration.html" class="nav-link text-white"
               ><i class="fas fa-sliders me-2"></i>Configuration</a
             >
           </li>
           <li
             class="nav-item mb-2 d-flex justify-content-between align-items-center"
           >
-            <a href="/notifications.html" class="nav-link text-white">
+            <a href="./notifications.html" class="nav-link text-white">
               <i class="fas fa-bell me-2"></i>Notifications
             </a>
             <span
@@ -148,8 +148,8 @@
       </div>
     </div>
 
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/supplier-details.js"></script>
+    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/supplier-details.js"></script>
     <script>
       // Auto datetime script
       document.addEventListener("DOMContentLoaded", function () {
