--- a/group-detail.html
+++ b/group-detail.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <!-- Top Navigation/Header -->
@@ -22,7 +22,7 @@
     >
       <!-- Left: Logo -->
       <div class="d-flex align-items-center gap-3 nissi-logo">
-        <img src="/assets/img/nissi-logo.png" alt="Nissi Logo" />
+        <img src="./assets/img/nissi-logo.png" alt="Nissi Logo" />
       </div>
 
       <!-- Center: Search Bar -->
@@ -50,19 +50,19 @@
       <nav class="text-white p-3" id="sidebar">
         <ul class="nav flex-column">
           <li class="nav-item mb-2">
-            <a href="/index.html" class="nav-link text-white"
+            <a href="./index.html" class="nav-link text-white"
               ><i class="fas fa-table me-2"></i>Dashboard</a
             >
           </li>
           <li class="nav-item mb-2">
-            <a href="/sales.html" class="nav-link text-white"
+            <a href="./sales.html" class="nav-link text-white"
               ><i class="fas fa-chart-line me-2"></i>Sales</a
             >
           </li>
           <li
             class="nav-item mb-2 d-flex justify-content-between align-items-center"
           >
-            <a href="/inventory.html" class="nav-link text-white active">
+            <a href="./inventory.html" class="nav-link text-white active">
               <i class="fas fa-medkit me-2"></i>Inventory
             </a>
             <span
@@ -73,24 +73,24 @@
             >
           </li>
           <li class="nav-item mb-2">
-            <a href="/suppliers.html" class="nav-link text-white"
+            <a href="./suppliers.html" class="nav-link text-white"
               ><i class="fas fa-truck me-2"></i>Suppliers</a
             >
           </li>
           <li class="nav-item mb-2">
-            <a href="/reports.html" class="nav-link text-white"
+            <a href="./reports.html" class="nav-link text-white"
               ><i class="fas fa-file-alt me-2"></i>Reports</a
             >
           </li>
           <li class="nav-item mb-2">
-            <a href="/configuration.html" class="nav-link text-white"
+            <a href="./configuration.html" class="nav-link text-white"
               ><i class="fas fa-sliders me-2"></i>Configuration</a
             >
           </li>
           <li
             class="nav-item mb-2 d-flex justify-content-between align-items-center"
           >
-            <a href="/notifications.html" class="nav-link text-white">
+            <a href="./notifications.html" class="nav-link text-white">
               <i class="fas fa-bell me-2"></i>Notifications
             </a>
             <span
@@ -112,7 +112,7 @@
       <div class="container-fluid p-4" id="page-content">
         <div class="d-flex justify-content-between align-items-center mb-4">
           <h5 id="groupTitle">Group: -</h5>
-          <a href="/medicine-groups.html" class="btn btn-secondary btn-sm">
+          <a href="./medicine-groups.html" class="btn btn-secondary btn-sm">
             <i class="fas fa-arrow-left me-1"></i>Back to Groups
           </a>
         </div>
@@ -137,7 +137,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/group-detail.js"></script>
+    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/group-detail.js"></script>
   </body>
 </html>
