--- a/inventory.html
+++ b/inventory.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <!-- Top Navigation/Header -->
@@ -22,7 +22,7 @@
     >
       <!-- Left: Logo -->
       <div class="d-flex align-items-center gap-3 nissi-logo">
-        <img src="/assets/img/nissi-logo.png" alt="Nissi Logo" />
+        <img src="./assets/img/nissi-logo.png" alt="Nissi Logo" />
       </div>
 
       <!-- Center: Search Bar -->
@@ -50,19 +50,19 @@
       <nav class="text-white p-3" id="sidebar">
         <ul class="nav flex-column">
           <li class="nav-item mb-2">
-            <a href="/index.html" class="nav-link text-white"
+            <a href="./index.html" class="nav-link text-white"
               ><i class="fas fa-table me-2"></i>Dashboard</a
             >
           </li>
           <li class="nav-item mb-2">
-            <a href="/sales.html" class="nav-link text-white"
+            <a href="./sales.html" class="nav-link text-white"
               ><i class="fas fa-chart-line me-2"></i>Sales</a
             >
           </li>
           <li
             class="nav-item mb-2 d-flex justify-content-between align-items-center"
           >
-            <a href="/inventory.html" class="nav-link text-white active">
+            <a href="./inventory.html" class="nav-link text-white active">
               <i class="fas fa-medkit me-2"></i>Inventory
               <span
                 class="badge bg-danger rounded-pill me-2"
@@ -73,24 +73,24 @@
             </a>
           </li>
           <li class="nav-item mb-2">
-            <a href="/suppliers.html" class="nav-link text-white"
+            <a href="./suppliers.html" class="nav-link text-white"
               ><i class="fas fa-truck me-2"></i>Suppliers</a
             >
           </li>
           <li class="nav-item mb-2">
-            <a href="/reports.html" class="nav-link text-white"
+            <a href="./reports.html" class="nav-link text-white"
               ><i class="fas fa-file-alt me-2"></i>Reports</a
             >
           </li>
           <li class="nav-item mb-2">
-            <a href="/configuration.html" class="nav-link text-white"
+            <a href="./configuration.html" class="nav-link text-white"
               ><i class="fas fa-sliders me-2"></i>Configuration</a
             >
           </li>
           <li
             class="nav-item mb-2 d-flex justify-content-between align-items-center"
           >
-            <a href="/notifications.html" class="nav-link text-white">
+            <a href="./notifications.html" class="nav-link text-white">
               <i class="fas fa-bell me-2"></i>Notifications
             </a>
             <span
@@ -120,7 +120,7 @@
                 <h6>Medicines Available</h6>
                 <h3 id="medicinesCount">0</h3>
                 <a
-                  href="/inventory.html"
+                  href="./inventory.html"
                   class="btn btn-sm btn-outline-primary mt-2"
                   >View Full List</a
                 >
@@ -134,7 +134,7 @@
                 <h6>Medicine Groups</h6>
                 <h3 id="groupCount">0</h3>
                 <a
-                  href="/medicine-groups.html"
+                  href="./medicine-groups.html"
                   class="btn btn-sm btn-outline-primary mt-2"
                   >View Groups</a
                 >
@@ -148,7 +148,7 @@
                 <h6>Medicine Shortage</h6>
                 <h3 id="shortageCount">0</h3>
                 <a
-                  href="/inventory.html"
+                  href="./inventory.html"
                   class="btn btn-sm btn-outline-danger mt-2"
                   >Resolve Now</a
                 >
@@ -159,7 +159,7 @@
 
         <div class="d-flex justify-content-between align-items-center my-5">
           <h5><i class="fas fa-pills me-2"></i>Products</h5>
-          <a href="/add-medicine.html" class="btn btn-success btn-sm">
+          <a href="./add-medicine.html" class="btn btn-success btn-sm">
             <i class="fas fa-plus me-1"></i>Add New Product
           </a>
         </div>
@@ -267,9 +267,9 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/inventory-overview.js"></script>
-    <script src="/assets/js/medicine-groups.js"></script>
-    <script src="/assets/js/inventory.js"></script>
+    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/inventory-overview.js"></script>
+    <script src="./assets/js/medicine-groups.js"></script>
+    <script src="./assets/js/inventory.js"></script>
   </body>
 </html>
