--- a/reports.html
+++ b/reports.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <style>
       #chart {
         width: 100%;
@@ -28,7 +28,7 @@
     >
       <!-- Left: Logo -->
       <div class="d-flex align-items-center gap-3 nissi-logo">
-        <img src="/assets/img/nissi-logo.png" alt="Nissi Logo" />
+        <img src="./assets/img/nissi-logo.png" alt="Nissi Logo" />
       </div>
 
       <!-- Center: Search Bar -->
@@ -56,19 +56,19 @@
       <nav class="text-white p-3" id="sidebar">
         <ul class="nav flex-column">
           <li class="nav-item mb-2">
-            <a href="/index.html" class="nav-link text-white"
+            <a href="./index.html" class="nav-link text-white"
               ><i class="fas fa-table me-2"></i>Dashboard</a
             >
           </li>
           <li class="nav-item mb-2">
-            <a href="/sales.html" class="nav-link text-white"
+            <a href="./sales.html" class="nav-link text-white"
               ><i class="fas fa-chart-line me-2"></i>Sales</a
             >
           </li>
           <li
             class="nav-item mb-2 d-flex justify-content-between align-items-center"
           >
-            <a href="/inventory.html" class="nav-link text-white">
+            <a href="./inventory.html" class="nav-link text-white">
               <i class="fas fa-medkit me-2"></i>Inventory
             </a>
             <span
@@ -79,24 +79,24 @@
             >
           </li>
           <li class="nav-item mb-2">
-            <a href="/suppliers.html" class="nav-link text-white"
+            <a href="./suppliers.html" class="nav-link text-white"
               ><i class="fas fa-truck me-2"></i>Suppliers</a
             >
           </li>
           <li class="nav-item mb-2">
-            <a href="/reports.html" class="nav-link text-white active"
+            <a href="./reports.html" class="nav-link text-white active"
               ><i class="fas fa-file-alt me-2"></i>Reports</a
             >
           </li>
           <li class="nav-item mb-2">
-            <a href="/configuration.html" class="nav-link text-white"
+            <a href="./configuration.html" class="nav-link text-white"
               ><i class="fas fa-sliders me-2"></i>Configuration</a
             >
           </li>
           <li
             class="nav-item mb-2 d-flex justify-content-between align-items-center"
           >
-            <a href="/notifications.html" class="nav-link text-white">
+            <a href="./notifications.html" class="nav-link text-white">
               <i class="fas fa-bell me-2"></i>Notifications
             </a>
             <span
@@ -155,7 +155,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/reports.js"></script>
+    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/reports.js"></script>
   </body>
 </html>
