--- a/transaction-details.html
+++ b/transaction-details.html
@@ -12,13 +12,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <div class="container mt-4">
       <div class="d-flex justify-content-between align-items-center mb-3">
         <h4>Transaction Details</h4>
-        <a href="/sales.html" class="btn btn-secondary">
+        <a href="./sales.html" class="btn btn-secondary">
           <i class="fas fa-arrow-left"></i> Back to Sales
         </a>
       </div>
@@ -94,6 +94,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/transaction-details.js"></script>
+    <script src="./assets/js/transaction-details.js"></script>
   </body>
 </html>
